--- a/style.css
+++ b/style.css
@@ -161,6 +161,10 @@ footer {
 
 }
 
+.dark-theme footer {
+  background-color: black;
+}
+
 /*styling for the recipes section*/
 #recipes {
   margin: 20px auto;
@@ -169,6 +173,10 @@ footer {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 800px;
+  }
+  .dark-theme #recipes {
+    background-color: #666666;
+    color: white;
   }
 
   /*style for the recipe list header*/
@@ -189,7 +197,13 @@ footer {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 800px;
   }
-
+  .dark-theme  #recipe-list {
+   
+    background-color: #666666;
+    }
+    .dark-theme #shopping-list {
+      background-color: #666666;
+    }
   /*headers*/
   #recipe-list h3, #shopping-list h3 {
   font-size: 1.5rem;
@@ -214,6 +228,12 @@ footer {
   #recipe-table th, #shopping-list-items th {
   background-color: #f4f4f4;
   }
+.dark-theme #recipe-table th {
+  background-color: #666666;
+}
+.dark-theme #shopping-list-items th {
+  background-color: #666666;
+}
 
   #clear-recipe-list {
   margin-top: 10px;
@@ -297,6 +317,9 @@ footer {
   border-radius: 5px;
   overflow: hidden;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  .dark-theme .suggestion-box {
+    background-color: #666666;
   }
 
   .suggestion-item {
