--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
@@ -331,7 +335,103 @@ footer {
   background-color: #f0f0f0;
   }
 
-  
-@media only screen and (max-width: 600px) {
+  #planner-recipe-table {
+    width: 100%;
+    border-collapse: collapse;
+}
 
+#planner-recipe-table th, #planner-recipe-table td {
+    font-size: 16px;
+    text-align: left;
+    padding: 10px;
+    border: 1px solid #ccc;
+}
+
+#planner-recipe-table th {
+    background-color: #f4f4f4;
+    font-weight: bold;
+}
+
+.delete-btn {
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  font-size: 14px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.delete-btn:hover {
+  background-color: #cc0000;
+}
+
+.planner-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
+  margin: 20px;
+}
+
+#recipe-list-planner {
+  margin: 0;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow-y: auto; 
+  height: auto;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin-top: 20px;
+  padding: 20px;
+}
+
+.grid-container div {
+  text-align: center;
+  padding: 20px;
+  background-color: rgba(192, 255, 162, 0.7);
+  border-radius: 10px;
+}
+
+/* Back to Top Button */
+.back-to-top {
+  position: fixed;
+  bottom: 20px; 
+  right: 20px; 
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  padding: 10px 15px;
+  font-size: 24px;
+  cursor: pointer;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  z-index: 1000; 
+}
+
+.back-to-top:hover {
+  background-color: #388e3c;
+}
+
+.back-to-top.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+@media only screen and (max-width: 600px) {
+  .planner-container {
+      grid-template-columns: 1fr; 
+  }
+
+  .grid-container {
+      grid-template-columns: 1fr;
+  }
 }
