--- a/style.css
+++ b/style.css
@@ -77,6 +77,11 @@ h1 {
     font-size: 25px;
     text-align: center;
 }
+.planner-h1 {
+  text-align: left;
+  padding-left: 40px;
+  font-size: 30px;
+}
 h2 {
     font-size: 20px;
     text-align: center;
@@ -119,6 +124,11 @@ table, td {
     margin-left: auto;
     padding-left: 110px;
     padding-right: 110px;
+    background-image: url('https://gallery.yopriceville.com/var/albums/Backgrounds/Vegetable_Background.jpg?m=1629741997');
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 3%;
+    border-color: black;
 
 }
 .darkbtn {
@@ -447,7 +457,12 @@ footer {
   background-color: #f0f0f0;
   border: 1px dashed #ccc;
 }
-
+.carrot {
+  border-style: solid;
+  border-color: black;
+  height: 250px;
+  width: 250px;
+}
 @media only screen and (max-width: 600px) {
   .planner-container {
       grid-template-columns: 1fr; 
