--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ table, td {
 .dark-theme .darkbtn {
   color: white;
 }
-.monday, .tuesday, .wednesday, .thursday, .friday, .saturday, .sunday, .grid-img {
+.monday, .tuesday, .wednesday, .thursday, .friday, .saturday, .sunday {
     background-color: rgba(192, 255, 162, 0.527);
     padding: 20px;
     margin-right: 20%;
@@ -393,10 +393,8 @@ footer {
   display: flex;
     position: relative;
     justify-content: space-evenly;
-    width: 100%;
     z-index: 1;
 }
-
 
 #recipe-list-planner {
   margin: 0;
@@ -472,5 +470,11 @@ footer {
 
   .grid-container {
       grid-template-columns: 1fr;
+  }
+  .monday, .tuesday, .wednesday, .thursday, .friday, .saturday, .sunday {
+    width: 40%;
+  }
+  header {
+    height: 13%;
   }
 }
